# microwave-filter-synthesis-rust

./: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  SUPPORT.md
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter-template.md
docs/: algorithm-roadmap.md  api-sketch.md  architecture.md  cameron-coupling-matrix-algorithms.md  cameron-vs-rust-matrix-implementation.md  contributor-guide-for-filter-synthesis-library.md  current-code-to-target-architecture-migration-plan.md  development-guide.md  filter-synthesis-open-source-library-architecture.md  filter_database_case_output.md  first-github-release-notes.md  github-profile-template.md  implementation-roadmap-for-filter-synthesis-library.md  index-for-filter-synthesis-library-design.md  literature-fixture-catalog.md  migration-plan.md  open-source-release-checklist.md  public-api-sketch-for-filter-synthesis-library.md  quickstart_report_output.md  refactor-roadmap.md  rust-crate-and-module-layout-for-filter-synthesis.md  testing-strategy-for-filter-synthesis-library.md
examples/: chebyshev_bandpass.rs  filter_database_case.rs  literature_fixtures.rs  quickstart_prelude.rs  quickstart_report.rs  reference_e_stage_check.rs
src/: error.rs  freq.rs  lib.rs  prelude.rs  spec.rs  synthesis.rs
target_review/: .rustc_info.json
tests/: database.json  filter_database.json  filter_database_flow.rs  high_level_helpers.rs  literature_fixtures.rs  matrix_store_template.json  prelude_smoke.rs  section_synthesis_facade.rs  synthesis_facade.rs  transform_shape.rs  (+1 more)
(+107 files in other folders)
